packages/ui/app/src/mdx/components/accordion/index.scss
@layer components {
    .fern-accordion {
        @apply fern-card divide-default mb-6 mt-4 divide-y rounded-lg first:mt-0;
    }

    .fern-accordion-item {
        @apply scroll-mt-content-padded first:rounded-t-[inherit] last:rounded-b-[inherit];
    }

    .fern-accordion-trigger {
        @apply flex w-full items-center gap-3 rounded-[inherit] p-4 transition-colors hover:bg-tag-default data-[state=open]:rounded-b-none cursor-pointer;

        .fern-accordion-trigger-arrow {
            @apply duration-[400ms] t-muted size-4 transition-transform ease-shift;
        }

        &[data-state="open"] .fern-accordion-trigger-arrow {
            @apply rotate-90;
        }

        .fern-accordion-trigger-title {
            @apply t-default m-0 -mb-px flex max-w-max text-base leading-6 text-left;
        }
    }

    .fern-accordion-content {
        @apply overflow-hidden data-[state=closed]:animate-slide-up data-[state=open]:animate-slide-down;
    }
}

